--- a/app/assets/style.css
+++ b/app/assets/style.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
+    background: #ececec;
 }
 
 #camera {
@@ -27,7 +29,7 @@ body {
 
     border: 0;
     border-radius: 1em;
-    background-color: #dedede;
+    background-color: #eee;
     padding: 0.5em 2em;
 }
 
@@ -53,7 +55,7 @@ body {
     width: 100%;
     height: 100%;
 
-    box-shadow: 0 0 0 999px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 0 999px rgba(1, 1, 1, 0.4);
 }
 
 #snapshot {
@@ -85,7 +87,7 @@ body {
 }
 
 #about {
-    background-color: white;
+    background-color: #ececec;
     height: 100%;
 }
 
