--- a/app/assets/style.css
+++ b/app/assets/style.css
@@ -1,122 +1,94 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #ECECEC;
-  }
-  
-  #camera {
+}
+
+#camera {
     position: fixed;
     top: 50%;
     left: 50%;
-  
+
     min-width: 100%;
     min-height: 100%;
     width: auto;
     height: auto;
-  
+
     z-index: -100;
-  
+
     transform: translateX(-50%) translateY(-50%);
-  }
-  
-  #container {
-    text-align: center;
-    margin: 0;
-  }
-  
-  #qr-canvas {
-    margin: auto;
-    width: calc(100% - 20px);
-    max-width: 400px;
-  }
-  
-  
-#qr-result {
-  font-size: 1.2em;
-  margin: 20px auto;
-  padding: 20px;
-  max-width: 700px;
-  background-color: white;
 }
 
+.mdl-dialog__content {
+    text-align: center;
+}
 
-  #snapshotLimitOverlay {
+#resultsContainer {
+    overflow-wrap: break-word;
+
+    border: 0;
+    border-radius: 1em;
+    background-color: #dedede;
+    padding: 0.5em 2em;
+}
+
+#snapshotLimitOverlay {
     position: absolute;
     top: 50%;
     left: 50%;
-  
+
     width: 70vmin;
     height: 70vmin;
-  
+
     transform: translateX(-50%) translateY(-50%);
-  
+
     text-align: center;
-  }
-  
-  #snapshotLimitOverlay:after {
-    content: "";
-  
+}
+
+#snapshotLimitOverlay:after {
+    content:'';
+
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-  
-    box-shadow: 0 0 0 999px rgba(0, 0, 0, 1);
-  }
-  
-  #snapshot {
+
+    box-shadow: 0 0 0 999px rgba(0, 0, 0, 0.4);
+}
+
+#snapshot {
     display: none;
-  }
-  
-  #loading {
+}
+
+#loading {
     display: none;
     position: absolute;
     width: 100%;
     z-index: 10;
-  }
+}
 
-  .button{
-    background-color: #ECECEC;
-    font-family: 'Poppins', sans-serif;
-    border-radius: 12px;
-    color: #5e17eb;
-    padding: 15px 32px;
-    text-align: center;
-    display: inline-block;
-    font-size: 16px;
-  }
-  
-  #flipCamera,
-  #startButton {
-    font-family: 'Poppins', sans-serif;
-    border: none;
-    padding: 15px 32px;
-    text-align: center;
-    display: inline-block;
-    font-size: 16px;
-  }
-  
-  #flipCamera {
+#flipCamera, #aboutButton {
+    position: absolute;
+    background-color: #eee;
+}
+
+#flipCamera {
     display: none;
+
     top: 5vmin;
     right: 5vmin;
-  }
-  
-  #startButton {
-    border-radius: 12px;
+}
+
+#aboutButton {
     bottom: 5vmin;
     left: 5vmin;
-  }
-  
-  #start {
-    background-color: #ECECEC;
+}
+
+#about {
+    background-color: white;
     height: 100%;
-  }
-  
-  #h1 {
-    text-align:center;
+}
+
+#about h4 {
     margin-top: 0;
-    color:#5e17eb;
-    font-family: 'Poppins', sans-serif;
-  }
+}
